--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.2",
+    "nodemailer": "^6.9.12",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.0"
