--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-validator": "^7.0.1",
+    "joi": "^17.13.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.1",
-    "nodemailer": "^6.9.12",
+    "nodemailer": "^6.9.13",
+    "nodemailer-express-handlebars": "^6.1.2",
+    "pg": "^8.11.5",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.0"
@@ -25,7 +26,7 @@
   "devDependencies": {
     "sass": "~1.32.12",
     "sass-loader": "^10",
-    "unplugin-vue-components": "^0.26.0",
+    "unplugin-vue-components": "^0.17.15",
     "vite": "^2.7.13",
     "vite-plugin-vue2": "^1.9.3",
     "vue-template-compiler": "^2.6.11"
