Registro y base de datos

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 ALLOWED_ORIGINS="http://192.168.56.1:3000,http://192.168.87.1:3000,http://192.168.116.1:3000,http://192.168.142.1:3000,http://10.8.100.35:3000,http://localhost:3000"
 DB_USER=postgres
 DB_HOST=localhost
-DB_NAME=reseñas
+DB_NAME=resenas
 DB_PASS="12345"
 DB_PORT=5432
+EMAIL_USER=upbite@outlook.com
+EMAIL_PASS=almuerzos2024*
 JWT_SECRET=tu-secreto
