--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-handlebars": "^7.1.2",
+    "express-jwt": "^5.3.3",
+    "express-unless": "^2.1.3",
     "joi": "^17.13.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.13",
@@ -26,9 +29,9 @@
   "devDependencies": {
     "sass": "~1.32.12",
     "sass-loader": "^10",
-    "unplugin-vue-components": "^0.17.15",
-    "vite": "^2.7.13",
-    "vite-plugin-vue2": "^1.9.3",
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "^4.5.3",
+    "vite-plugin-vue2": "^2.0.3",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
