--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.9.13",
     "nodemailer-express-handlebars": "^6.1.2",
     "pg": "^8.11.5",
+    "sequelize": "^6.37.3",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.0"
