--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.3.1",
     "nodemailer": "^6.9.12",
     "vue": "^2.6.14",
+    "vue-i18n": "^9.13.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.0"
   },
